# cutf

./: .gitignore  CMakeLists.txt  README.md
include/: cutf.h
src/: conv_basic.c  conv_basic.h  cutf.c
tests/: CMakeLists.txt  test_c16_to_c32.c  test_c16_to_c8.c  test_c32_to_c16.c  test_c32_to_c8.c  test_c8_to_c16.c  test_c8_to_c32.c  test_common.h
